Fixed display issue with main site logo. Altered text for login/my account button on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -20,9 +20,11 @@ body {
 }
 
 .main-logo {
-    width: 8vw;
     position: absolute;
-    top: 10%
+    top: 5px;
+    left: 5px;
+    height: 10vh;
+    object-fit: contain;
 }
 
 .nav-list-menus {
